--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ squiggles.txt
 
 # Ignore Redis
 *.rdb
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
