--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version '3'
+version: '3'
 
 services:
   web:
@@ -7,3 +7,7 @@ services:
       dockerfile: ./Dockerfile.dev
     ports:
       - "3000:3000"
+    volumes:
+      - .:/usr/src/app
+  redis:
+    image: redis
