feat (devops): Decoupled database data from container using named volume. Added pg gem.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,11 @@ services:
     image: postgres
     env_file:
       - .env/development/database
+    volumes:
+      - database_data:/var/lib/postgresql/data
 
   redis:
     image: redis
+
+volumes:
+  database_data:
