--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: locations
+#
+#  id                   :bigint           not null, primary key
+#  name                 :string           not null
+#  inventory            :boolean          default(TRUE), not null
+#  local_pickup         :boolean          default(FALSE), not null
+#  default              :boolean          not null
+#  fulfillment_priority :integer
+#  created_at           :datetime         not null
+#  updated_at           :datetime         not null
+#
 
 one:
   name: MyString
