--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "soko",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.3-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "bootstrap": "^5.0.1",
+    "jquery": "^3.6.0",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
