--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soko",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
@@ -11,8 +12,10 @@
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
+    "perfect-scrollbar": "^1.5.1",
     "trix": "^1.2.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "typescript": "^4.2.4"
   },
   "version": "0.1.0",
   "devDependencies": {
