--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
+    "knockout": "^3.5.1",
     "perfect-scrollbar": "^1.5.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
