fix: Fixed menuLeftModule and got it to work.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "@types/jquery": "^3.5.5",
+    "@types/knockout": "^3.4.70",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "knockout": "^3.5.1",
