--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "knockout": "^3.5.1",
     "perfect-scrollbar": "^1.5.1",
+    "select2": "^4.1.0-rc.0",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "typescript": "^4.2.4"
