--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "@rails/actiontext": "^6.1.3-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "5.4.0",
     "@types/jquery": "^3.5.5",
     "@types/knockout": "^3.4.70",
     "bootstrap": "^5.0.1",
+    "expose-loader": "1",
     "jquery": "^3.6.0",
+    "jquery-ui": "^1.12.1",
     "knockout": "^3.5.1",
+    "knockout-sortable": "^1.2.1",
     "perfect-scrollbar": "^1.5.1",
     "select2": "^4.1.0-rc.0",
     "trix": "^1.2.0",
+    "ts-loader": "^9.2.3",
     "turbolinks": "^5.2.0",
     "typescript": "^4.2.4"
   },
