--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
-    "@types/jquery": "^3.5.5",
+    "@types/jquery": "^3.5.6",
     "@types/knockout": "^3.4.70",
+    "@types/lodash": "^4.14.172",
     "bootstrap": "^5.0.1",
     "expose-loader": "1",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "knockout": "^3.5.1",
+    "knockout-mapping": "^2.6.0",
     "knockout-sortable": "^1.2.1",
+    "lodash": "^4.17.21",
     "perfect-scrollbar": "^1.5.1",
     "select2": "^4.1.0-rc.0",
     "trix": "^1.2.0",
     "ts-loader": "^9.2.3",
     "turbolinks": "^5.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "uuid": "^8.3.2"
   },
   "version": "0.1.0",
   "devDependencies": {
