--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knockout-mapping": "^2.6.0",
     "knockout-sortable": "^1.2.1",
     "lodash": "^4.17.21",
+    "object-to-formdata": "^4.1.0",
     "perfect-scrollbar": "^1.5.1",
     "select2": "^4.1.0-rc.0",
     "trix": "^1.2.0",
